# monadicErrorHandlingPython

./: lbyl_eafp_example.py  pyproject.toml  pyrightconfig.json  readme.md  result_monad_example.py
